--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,16 @@
   width: 1400px;
   overflow-x: hidden;
 }
+
+.load-center{
+  width: 100%;
+  height: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ui.segment{
+  width: 100%;
+  height: 700px;
+}
