--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -5,6 +5,19 @@
     flex-flow: column;
     align-items: center;
     overflow-x: hidden;
+    transition: all 2s ease-in-out;
+    opacity: 1;
+}
+
+.hire-none{
+    width: 100%;
+    background-color: transparent;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    overflow-x: hidden;
+    transition: all 2s ease-in-out;
+    opacity: 0;
 }
 
 .largehire{
