--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .Appcolor{
-  background-color: black;
+  background-color: #202020;
 }
 
 .largeapp{
@@ -23,4 +23,11 @@
 .ui.segment{
   width: 100%;
   height: 700px;
+}
+
+.services-none{
+  opacity: 0;
+  width: 100%;
+  padding-bottom: 50px;
+  background-color: #202020;
 }
