--- a/src/home/css/Services.css
+++ b/src/home/css/Services.css
@@ -1,15 +1,9 @@
-
 .services{
     width: 100%;
     padding-bottom: 50px;
-    animation-name: example;
-    animation-duration: 10.5s;
-    animation-delay: 0s;
-}
-
-@keyframes example {
-    from {opacity: 0; background-color: #202020;}
-    to {opacity: 1; background-color: #fff;}
+    opacity: 1;
+    background-color: white;
+    transition: all 2s ease-in-out;
 }
 
 .largeservice{
