--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -3,12 +3,14 @@
     width: 100%;
     padding-bottom: 30px;
     transition: all 2s ease-in-out;
+    opacity: 1;
 }
 
 .about-none{
     background-color: #fff !important;
     width: 100%;
     padding-bottom: 30px;
+    opacity: 0;
 }
 
 .largeabout{
