--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -66,7 +66,7 @@
 }
 
 .btn{
-    background-color: white !important;
+    background-color: transparent !important;
     border: 1px solid rgb(247, 0, 140) !important;
     padding-left: 25.6px;
     padding-right: 25.6px;
