--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -2,15 +2,14 @@
     background-color: #202020 !important;
     width: 100%;
     padding-bottom: 30px;
-    transition: all 2s ease-in-out;
-    opacity: 1;
+    transition: all 0.5s ease-in-out;
 }
 
 .about-none{
     background-color: #fff !important;
     width: 100%;
     padding-bottom: 30px;
-    opacity: 0;
+    transition: all 0.5s ease-in-out;
 }
 
 .largeabout{
@@ -25,6 +24,18 @@
     padding-top: 50px;
     margin: auto;
     margin-right: 0 !important;
+    opacity: 1;
+    transition: all 0.5s ease-in-out;
+}
+
+.aboutColor{
+    transition: all 0.5s ease-in-out;
+    opacity: 1;
+}
+
+.aboutColor-none{
+    transition: all 0.5s ease-in-out;
+    opacity: 0;
 }
 
 .yellowtab{
