--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App {
   width: 100%;
   overflow-x: hidden;
+  transition: all 0.5s ease-in-out;
 }
 
 .Appcolor{
+  transition: all 0.5s ease-in-out;
   background-color: #202020;
 }
 
@@ -26,8 +28,8 @@
 }
 
 .services-none{
-  opacity: 0;
   width: 100%;
-  padding-bottom: 50px;
+  stroke-width: 0 !important;
   background-color: #202020;
+  transition: all 0.5s ease-in-out;
 }
