--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -116,7 +116,7 @@
 }
 
 .mobbtn{
-    background-color: white !important;
+    background-color: transparent !important;
     border: 1px solid rgb(135, 135, 135) !important;
     padding-left: 25.6px;   
     padding-right: 25.6px;
