--- a/src/home/css/Services.css
+++ b/src/home/css/Services.css
@@ -1,15 +1,26 @@
 .services{
     width: 100%;
-    padding-bottom: 50px;
-    opacity: 1;
     background-color: white;
-    transition: all 2s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 .largeservice{
     width: 1400px;
-    padding-bottom: 50px;
     margin: auto;
+}
+
+.bottom50{
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    transition: all 0.5s ease-in-out;
+}
+
+.bottom50-none{
+    width: 100%;
+    height: 50px;
+    background-color: #EEEA64;
+    transition: all 0.5s ease-in-out;
 }
 
 .desktop{
